--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
                 <div class="game">
                     <h3>Game Title 2</h3>
                     <p>Description of Game 2.</p>
+                </section>
+                <section class="video">
+    <h2>Watch Our Latest Video</h2>
+    <a href="https://youtu.be/-RQSG2BEpgg" target="_blank">Watch the Video on YouTube</a>
+                </section>
                 </div>
                 <div class="game">
                     <h3>Game Title 3</h3>
