--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </section>
                 <section class="video">
     <h2>Watch Our Latest Video</h2>
-    <a href="https://youtu.be/-RQSG2BEpgg" target="_blank">Watch the Video on YouTube</a>
+    <a href="https://youtu.be/-RQSG2BEpgg" target="_blank">Xem Video Này Trên Youtube</a>
                 </section>
                 </div>
                 <div class="game">
