--- a/index.html
+++ b/index.html
@@ -33,11 +33,6 @@
                 <div class="game">
                     <h3>Game Title 2</h3>
                     <p>Description of Game 2.</p>
-                </section>
-                <section class="video">
-    <h2>Watch Our Latest Video</h2>
-    <a href="https://youtu.be/-RQSG2BEpgg" target="_blank">Xem Video Này Trên Youtube</a>
-                </section>
                 </div>
                 <div class="game">
                     <h3>Game Title 3</h3>
@@ -45,9 +40,14 @@
                 </div>
             </div>
         </section>
+        <section class="video">
+            <h2>Watch Our Latest Video</h2>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/-RQSG2BEpgg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </section>
     </main>
     <footer>
         <p>&copy; 2024 Gaming Central. All rights reserved.</p>
     </footer>
 </body>
-</html>
+                                                                                                                                                                                                                                  </html>
+                                                                                                                                                                                                                                  
