--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <li><a href="#">Games</a></li>
                 <li><a href="#">News</a></li>
                 <li><a href="#">Contact</a></li>
+                <li><a href="https://discord.gg/your-invite-code" target="_blank">Join Our Discord</a></li>
             </ul>
         </nav>
     </header>
