--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
                 <li><a href="#">Products</a></li>
                 <li><a href="#">Contact</a></li>
                 <li><a href="#">Cart</a></li>
+                <li><a href="https://discord.com/invite/RkQ36xSaaH" target="_blank">Discord</a></li>
             </ul>
         </nav>
     </header>
     
     <main>
         <section class="hero">
-            <h2>Welcome to Our Store</h2>
+            <h2>Chào Mừng Bạn Đến Với greatvps.net</h2>
             <p>Discover the best products at unbeatable prices.</p>
         </section>
         
@@ -32,19 +33,19 @@
                     <img src="https://via.placeholder.com/150" alt="Product 1">
                     <h3>Product 1</h3>
                     <p>$19.99</p>
-                    <button>Add to Cart</button>
+                    <button>Thêm Vào Giỏ</button>
                 </div>
                 <div class="product">
                     <img src="https://via.placeholder.com/150" alt="Product 2">
                     <h3>Product 2</h3>
                     <p>$29.99</p>
-                    <button>Add to Cart</button>
+                    <button>Thêm Vào Giỏ</button>
                 </div>
                 <div class="product">
                     <img src="https://via.placeholder.com/150" alt="Product 3">
                     <h3>Product 3</h3>
                     <p>$39.99</p>
-                    <button>Add to Cart</button>
+                    <button>Thêm Vào Giỏ</button>
                 </div>
             </div>
         </section>
