--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grid Links Example</title>
+    <title>List in Corner Example</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Grid Links Layout</h1>
+        <h1>List in Corner Layout</h1>
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
@@ -20,18 +20,17 @@
     </header>
     
     <main>
-        <section class="grid-container">
-            <div class="grid-item"><a href="#">Link 1</a></div>
-            <div class="grid-item"><a href="#">Link 2</a></div>
-            <div class="grid-item"><a href="#">Link 3</a></div>
-            <div class="grid-item"><a href="#">Link 4</a></div>
-            <div class="grid-item"><a href="#">Link 5</a></div>
-            <!-- Thêm nhiều liên kết nếu cần -->
-        </section>
+        <!-- Nội dung chính của trang -->
     </main>
     
+    <div class="menu-toggle">
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+    </div>
+
     <footer>
-        <p>&copy; 2024 Grid Links Layout. All rights reserved.</p>
+        <p>&copy; 2024 List in Corner Layout. All rights reserved.</p>
     </footer>
 </body>
 </html>
