--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>List in Corner Example</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body> <div class="horizontal-line"></div>
     <header>
         <h1>List in Corner Layout</h1>
         <nav>
