--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     </header>
     
     <main>
-        <!-- Nội dung chính của trang -->
+        <h2>Welcome to Our Website!</h2>
+        <p>This is an example of a beautiful background layout with a horizontal line link.</p>
     </main>
     
     <a href="https://example.com" class="horizontal-line"></a> <!-- Đường kẻ ngang có liên kết -->
