--- a/index.html
+++ b/index.html
@@ -3,66 +3,80 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Hosting Shop</title>
+    <title>Modern Web Hosting Shop</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Web Hosting Shop</h1>
-        <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#plans">Plans</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
+        <div class="container">
+            <h1>Hosting Shop</h1>
+            <nav>
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#plans">Plans</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <section id="home">
-        <h2>Welcome to Our Hosting Service</h2>
-        <p>We provide reliable and affordable hosting solutions for your needs.</p>
+        <div class="container">
+            <h2>Welcome to Our Modern Hosting Service</h2>
+            <p>Reliable, fast, and affordable hosting solutions for your business.</p>
+        </div>
     </section>
 
     <section id="plans">
-        <h2>Our Hosting Plans</h2>
-        <div class="plan">
-            <h3>Basic Plan</h3>
-            <p>$5/month</p>
-            <button onclick="buyNow('Basic Plan')">Buy Now</button>
-        </div>
-        <div class="plan">
-            <h3>Standard Plan</h3>
-            <p>$10/month</p>
-            <button onclick="buyNow('Standard Plan')">Buy Now</button>
-        </div>
-        <div class="plan">
-            <h3>Premium Plan</h3>
-            <p>$20/month</p>
-            <button onclick="buyNow('Premium Plan')">Buy Now</button>
+        <div class="container">
+            <h2>Our Hosting Plans</h2>
+            <div class="plan-grid">
+                <div class="plan">
+                    <h3>Basic Plan</h3>
+                    <p>$5/month</p>
+                    <button onclick="buyNow('Basic Plan')">Buy Now</button>
+                </div>
+                <div class="plan">
+                    <h3>Standard Plan</h3>
+                    <p>$10/month</p>
+                    <button onclick="buyNow('Standard Plan')">Buy Now</button>
+                </div>
+                <div class="plan">
+                    <h3>Premium Plan</h3>
+                    <p>$20/month</p>
+                    <button onclick="buyNow('Premium Plan')">Buy Now</button>
+                </div>
+            </div>
         </div>
     </section>
 
     <section id="contact">
-        <h2>Contact Us</h2>
-        <form id="contact-form">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" required>
-
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
-
-            <label for="message">Message:</label>
-            <textarea id="message" name="message" required></textarea>
-
-            <button type="submit">Send</button>
-        </form>
+        <div class="container">
+            <h2>Contact Us</h2>
+            <form id="contact-form">
+                <div class="form-group">
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="name" required>
+                </div>
+                <div class="form-group">
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" required>
+                </div>
+                <div class="form-group">
+                    <label for="message">Message:</label>
+                    <textarea id="message" name="message" required></textarea>
+                </div>
+                <button type="submit">Send</button>
+            </form>
+        </div>
     </section>
 
     <footer>
-        <p>&copy; 2024 Web Hosting Shop. All rights reserved.</p>
+        <div class="container">
+            <p>&copy; 2024 Hosting Shop. All rights reserved.</p>
+        </div>
     </footer>
 
     <script src="script.js"></script>
 </body>
-        </html>
-        
+</html>
